<resources>
    <string name="app_name">新闻</string>
    <string name="action_settings">Settings</string>
    <string name="main">首页</string>
    <string name="dynamic">动态</string>
    <string name="message">消息</string>
    <string name="person">我</string>

    <string name="text_group">发起群聊</string>

    <string name="text_add">添加好友</string>

    <string name="text_sweep">扫一扫</string>

    <string name="text_collect">收付款</string>

    <string name="text_help">帮助与反馈</string>

    <string name="qqlogin">QQ登录</string>
    <string name="wxlogin">微信登录</string>
    <string name="wblogin">微博登录</string>


</resources>
