<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f2f2"
    >

    <LinearLayout
        style="@style/top_npy">
        >
        <ImageView
            android:id="@+id/iv_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ico_commen_back"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="登录"
            android:gravity="center"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/iv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="注册"
            android:padding="8dp"
            android:textSize="16sp"
            />


    </LinearLayout>
    <View
        style="@style/conmon_line_gray_90"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="140dp"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#07a6e6"
            ></View>

        <EditText


            android:id="@+id/edit_hao"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/ico_sign_01"
            android:layout_height="50dp"
            android:background="#FCFCFC"
            android:hint="请输入账号/手机号"

            />
        <View
            android:layout_below="@id/edit_hao"
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#1E1E1E"
            android:layout_marginLeft="30dp"

            />
        <EditText
            android:layout_marginTop="1dp"
            android:layout_below="@id/edit_hao"

            android:id="@+id/edit_psw"
            android:drawableLeft="@drawable/ico_sign_02"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FCFCFC"
            android:hint="请输入密码"
            android:inputType="textPassword"
            />
        <View
            android:layout_below="@id/edit_psw"
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#1E1E1E"
            android:layout_marginLeft="30dp"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="20dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注册或登录表示同意"
            />


        <TextView
            android:id="@+id/tv_terService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#63d065"
            android:text="使用法则"

            />
    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_sign_btn"
        android:text="登  录"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textColor="#ffffff"
        android:textSize="25dp"
        />
    <Button
        android:id="@+id/bt_forget_pswsword"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:text="忘记密码?"
        android:textColor="#98F5FF"
        android:textSize="19sp"
        android:layout_gravity="right"
        android:layout_marginRight="42dp"
        android:background="@null"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="horizontal"

        android:paddingLeft="54dp"
        android:paddingRight="54dp"
        >


        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:background="#bfbfbf"
            android:layout_weight="1"
            ></View>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="更多登录"
            android:textColor="#999999"
            android:gravity="center"
            android:layout_weight="1"


            />
        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="#bfbfbf"></View>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:layout_marginTop="20dp"

        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/iv_qq_login"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ico_sign_04"
                android:layout_marginBottom="3dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qqlogin"
                android:textColor="#999999"
                android:textSize="13sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/iv_weixin_login"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ico_sign_05"
                android:layout_marginBottom="3dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wxlogin"
                android:textColor="#999999"
                android:textSize="13sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/iv_sina_login"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ico_sign_06"
                android:layout_marginBottom="3dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wblogin"
                android:textColor="#999999"
                android:textSize="13sp"
                />

        </LinearLayout>




    </LinearLayout>


</LinearLayout>